# Obsidian

./: .gitignore  pyproject.toml  tasks.py
