[tool.poetry]
name = "obsidian"
version = "0.1.0"
description = "helper functions for my obsidian vault"
authors = ["Patrick Bray <patrickbray17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"
loguru = "^0.7.2"
black = "^23.10.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
